# dgre-climweb-data

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  ingest.cron  main.py  pyproject.toml
dgrehydro/: __init__.py  commands.py  ingestion.py  utils.py
dgrehydro/_static_data/critical_point/: water_level_thresholds.csv
dgrehydro/config/: base.py  country_config.py  test.py
dgrehydro/db/: dgre_critical_point.sql  dgre_dust_warning.sql  dgre_flash_flood.sql  dgre_poi_flow.sql  dgre_riverine_flood.sql  pgtileserv_functions.py
dgrehydro/ingestors/burkina/: geometries_loader.py  ingestor_dustwarning.py  ingestor_flashflood.py  ingestor_poiflow.py  ingestor_riverine.py
dgrehydro/ingestors/critical_points/: critpoint_fetch.py  critpoint_ingest.py  critpoint_service.py
dgrehydro/ingestors/flashflood/: flash_fetch.py  flash_ingest.py  flash_service.py
dgrehydro/ingestors/hype/: hype_fetch.py  hype_io.py  (+4 more)
dgrehydro/models/: _geo_poistation.py  _geo_region.py  criticalpoint.py  dustwarning.py  flashflood.py  municipality.py  poiflow.py  riverineflood.py  riversegment.py
dgrehydro/routes/: __init__.py  routes_criticalpoint.py  routes_dustwarning.py  routes_flashflood.py  routes_poiflow.py  routes_riverineflood.py  server.py
dgrehydro/service/: flash_db.py  riverine_db.py
dgrehydro/tests/: .test.env  test_ingestion.py
docker/: nginx.conf
migrations/versions/: adab6e92356d_.py  add_critical_point_.py  add_dust_warning_.py  add_poi_flow_.py  add_poi_station_.py
scripts/: inspectdb.sh  runfull.sh
(+20 files in other folders)
